swiper js bug fixed and overflow problem fixed

--- a/src/Home/SwipeBanner/SwiperBanner.css
+++ b/src/Home/SwipeBanner/SwiperBanner.css
@@ -25,7 +25,7 @@
 }
 
 .panel.active {
-  flex: 5;
+  flex: 3;
 }
 
 .panel.active h3 {
@@ -45,16 +45,17 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 30vh;
+    height: 250px;
+    width: 200px;
     color: #fff;
     cursor: pointer;
-    flex: 0.5;
     position: relative;
     transition: flex 0.7s ease-in;
   }
 
   .panel.active {
-    flex: 1.5;
+    height: 250px;
+    flex: 0.95;
   }
 
   .panel h3 {
